--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Ubuntu&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   
   <script src="https://kit.fontawesome.com/bbdbf1decc.js" crossorigin="anonymous"></script>
   
@@ -52,7 +52,7 @@
       <button type="button" class="btn  btn-outline-light btn-lg button"><i class="fab fa-google-play"></i>Download</button>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12">
-      <img class="img" src="images/iphone6.png" alt="iphone-mockup">
+      <img class="img" src="iphone6.png" alt="iphone-mockup">
     </div>
 </div>
 </div>
