--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="icon-logo" src="tnw.png" alt="tc-logo">
+    <img class="icon-logo" src="TechCrunch.png" alt="tc-logo">
     <img class="icon-logo" src="tnw.png" alt="tnw-logo">
     <img class="icon-logo" src="bizinsider.png" alt="biz-insider-logo">
     <img class="icon-logo" src="mashable.png" alt="mashable-logo">
